--- a/tmux.conf
+++ b/tmux.conf
@@ -76,7 +76,7 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Enable native Mac OS X copy/paste
-set-option -g default-command "/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'"
+if-shell "[ \"$(uname)\" = \"Darwin\" ]" "set-option -g default-command \"/bin/bash -c 'which reattach-to-user-namespace >/dev/null && exec reattach-to-user-namespace $SHELL -l || exec $SHELL -l'\""
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
