--- a/tmux.conf
+++ b/tmux.conf
@@ -21,8 +21,8 @@ bind-key bspace previous-window
 bind-key enter next-layout
 
 # use vim-like keys for splits and windows
-bind-key v split-window -h
-bind-key s split-window -v
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
@@ -37,7 +37,7 @@ set-window-option -g other-pane-width 80
 
 bind-key a last-pane
 bind-key q display-panes
-bind-key c new-window
+bind-key c new-window -c "#{pane_current_path}"
 bind-key t next-window
 bind-key T previous-window
 
