add tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ set-option -g default-terminal screen-256color
 
 bind-key : command-prompt
 bind-key r refresh-client
+bind-key R source-file ~/.tmux.conf
 bind-key L clear-history
 
 bind-key space next-window
@@ -80,3 +81,23 @@ if-shell "[ \"$(uname)\" = \"Darwin\" ]" "set-option -g default-command \"/bin/b
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 0
+
+# tmux plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'jimeh/tmux-themepack'
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# set -g @continuum-restore 'on'
+
+set -g @themepack 'block/red'
+
+# set -g @colors-solarized '256' (the default)
+# set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'light'
+
+run '~/.tmux/plugins/tpm/tpm'
+# run-shell ~/clone/path/resurrect.tmux
+# run '~/clone/path/continuum.tmux'
